# calcreate

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parser.rs  timeslots.rs
