[package]
name = "calcreate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.2.2"
ics = "0.5.8"
serde = { version = "1.0.181", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
